Use benchmark forking by default with JVM options optimized for throughput